--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ nav ul li a:hover {
 	align-content: center;
 	z-index: -1;
 	font-family: 'Permanent Marker', cursive;
+	animation: animasidescription 2s ease normal;
 }
 
 img {
@@ -172,6 +173,7 @@ footer {
 	text-align: center;
 	align-content: center;
 	justify-content: center;
+	animation: animasidescription 2s ease normal;
 }
 
 form .title h5 {
